--- a/src/main/webapp/academico/aluno/index.xhtml
+++ b/src/main/webapp/academico/aluno/index.xhtml
@@ -31,7 +31,7 @@
 				</h:panelGrid>
 				<h:dataTable id="tabela"
 					value="#{authenticationContext.professorTurmas}" var="alunoTurma"
-					styleClass="  table table-bordered table-bordered   tabela-funcionario tabelaProfessor left"
+					styleClass="  table table-bordered   tabela-funcionario tabelaProfessor left"
 					headerClass="cabecalhoTabelaAluno" rowClasses="linha1, linha2">
 
 					<h:column>
