--- a/src/main/webapp/academico/director/escola/identificacao.xhtml
+++ b/src/main/webapp/academico/director/escola/identificacao.xhtml
@@ -103,14 +103,14 @@
 				</div>
 				<div class="card-footer">
 
+
+					<h:commandButton value="Voltar" immediate="true"
+						style="margin-left:15%;" action="#{buscarFotoBean.voltar}"
+						styleClass=" btn btn-success" />
 					<h:commandButton value="Confirmar"
 						action="#{escolaBean.salvarEscolaSelecionada}"
-						styleClass="btn btn-primary" style="margin-left: 11%;" />
+						styleClass="btn btn-primary" style="margin-left: 10px;" />
 
-					<h:commandButton value="Cancelar" immediate="true"
-						style="margin-left:10px;"
-						action="/academico/director/index.jsf?faces-redirect=true"
-						styleClass=" btn btn-success" />
 
 				</div>
 			</div>
