--- a/src/main/webapp/academico/director/matriz/alterar.xhtml
+++ b/src/main/webapp/academico/director/matriz/alterar.xhtml
@@ -10,7 +10,7 @@
 
 <ui:composition template="/academico/principal/templete.xhtml">
 	<ui:define name="titulo">
-		Finalizar matriz curricular
+		Matriz curricular
 	</ui:define>
 
 	<ui:define name="menu">
@@ -22,7 +22,7 @@
 	<ui:define name="ambiente_comum">
 
 
-<ui:include src="/academico/escola/matriz/alterar.xhtml"></ui:include>
+		<ui:include src="/academico/escola/matriz/alterar.xhtml"></ui:include>
 
 	</ui:define>
 </ui:composition>
