--- a/src/main/webapp/academico/escola/sala/sala.xhtml
+++ b/src/main/webapp/academico/escola/sala/sala.xhtml
@@ -55,7 +55,7 @@
 					</div>
 				</div>
 				<h:dataTable value="#{salaBean.salas}" var="sala" id="tabela"
-					styleClass="table table-bordered tabelaProfessor  tabela-funcionario"
+					styleClass="table table-bordered tabelaProfessor hover tabela-funcionario left"
 					headerClass="cab-tabela" footerClass="fo-tabela"
 					style="margin-top: 20px;" rowClasses="linha2, linha1">
 
