--- a/src/main/webapp/academico/professor/nota/nota.xhtml
+++ b/src/main/webapp/academico/professor/nota/nota.xhtml
@@ -10,7 +10,7 @@
 	<ui:define name="titulo">
 		
 		<h:outputText 
-			value="Lançar Nota de Aluno" />
+			value="Lançar nota de alunos" />
 	</ui:define>
 	<ui:define name="cabacalho">
 		<link rel="stylesheet"
