--- a/src/main/webapp/academico/professor/nota/turma.xhtml
+++ b/src/main/webapp/academico/professor/nota/turma.xhtml
@@ -10,7 +10,7 @@
 
 <ui:composition template="/academico/principal/templete.xhtml">
 	<ui:define name="titulo">
-		<h:outputText value="Selecção de turma" />
+		<h:outputText value="Listas de turmas" />
 
 	</ui:define>
 	<ui:define name="cabacalho">
@@ -32,7 +32,7 @@
 			<!--Panel-->
 			<div class="card">
 				<h3 class="peg-titulo card-header primary-color white-text">
-					<h:outputText value="Selecção de turma" style="font-weight: 700;"
+					<h:outputText value="Selecione a turma" style="font-weight: 700;"
 						rendered="#{notaBean.selecionarturma == false}" />
 					<h:outputText value="Caderneta do professor"
 						style="font-weight: 700;"
