--- a/src/main/webapp/academico/programador/diaSemana/cadastro.xhtml
+++ b/src/main/webapp/academico/programador/diaSemana/cadastro.xhtml
@@ -107,7 +107,7 @@
 							</h:column>
 							<h:column>
 								<f:facet name="header">
-									<h:outputText value="Silga" />
+									<h:outputText value="Sigla" />
 								</f:facet>
 								<h:outputText value="#{diaSemana.sigla}"
 									style=" margin-left:4px;" />
