--- a/src/main/webapp/academico/programador/funcionario/cadastro.xhtml
+++ b/src/main/webapp/academico/programador/funcionario/cadastro.xhtml
@@ -83,9 +83,9 @@
 
 							<h:dataTable value="#{funcionarioBean.funcionarios}"
 								var="funcionario" id="tabela-funcionario"
-								styleClass="table table-bordered tabelaProfessor  tabela-funcionario"
+								styleClass="table table-bordered tabelaProfessor  tabela-funcionario left"
 								headerClass="cab-tabela" footerClass="fo-tabela"
-								style="margin-top: 20px;" rowClasses="linha2, linha1">
+								style="margin-top: 20px;" columnClasses="center" rowClasses="linha2, linha1">
 
 								<h:column headerClass="thead">
 									<f:facet name="header">
