--- a/src/main/webapp/academico/aluno/index.xhtml
+++ b/src/main/webapp/academico/aluno/index.xhtml
@@ -195,7 +195,7 @@
 								value=" &#x2716; Fechar">
 								<f:passThroughAttribute name="data-dismiss" value="modal" />
 								<p:ajax event="click" listener="#{professorTurmaBean.fechar}"
-									update="form_ambiente_comum:tabela" />
+									update="form_ambiente_comum:tabela:idDisciplina" />
 							</h:commandButton>
 						</div>
 					</div>
